<resources>
    <string name="app_name">GOTV</string>
    <string name="common_gotv">GOTV</string>
    <string name="common_next">Next</string>
    <string name="common_successful">Successful</string>
    <string name="common_loading">Loading…</string>
    <string name="common_none">None</string>
    <string name="common_back">Back</string>
    <string name="common_go">GO</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_all">ALL</string>
    <string name="common_us">US</string>

    <string name="network_unavailable">Network unavailable! Please try again later.</string>
    <string name="network_unavailable_title">Network unavailable!</string>
    <string name="network_unavailable_content">Please try again later.</string>
    <string name="network_unavailable_reload">Reload</string>

    <string name="register_welcome">Welcome!</string>
    <string name="register_voterId">Enter Voter ID</string>
    <string name="register_emptyVoterId">Please enter your voter id.</string>
    <string name="register_errorVoterId">Please enter a valid voter id.</string>
    <string name="register_noVoterId">Don\'t have your Voter ID?</string>
    <string name="register_registerVoter">Register Now</string>
    <string name="register_registerVoterTip">Please select your state and county, we will help you find the entrance to registration quickly.</string>
    <string name="register_baseInfoTitle">First, you need to verify identity</string>
    <string name="register_baseInfoFillOutTitle">Please fill out the form below</string>
    <string name="register_state">Your State</string>
    <string name="register_emptyState">Please select your state.</string>
    <string name="register_county">Your County</string>
    <string name="register_emptyCounty">Please select your county.</string>
    <string name="register_precinctNumber">Precinct No.</string>
    <string name="register_emptyPrecinctNumber">Please enter your precinct no.</string>
    <string name="register_questionPrecinctNumber">Please select your state and county first, so that we can help you quickly jump to your local elections official website.</string>
    <string name="register_lastName">Last Name</string>
    <string name="register_emptyLastName">Please enter your last name.</string>
    <string name="register_firstName">First Name</string>
    <string name="register_emptyFirstName">Please enter your first name.</string>
    <string name="register_middleName">Middle Name</string>
    <string name="register_nameSuffix">Name Suffix</string>
    <string name="register_mobilePhone">Enter your mobile number</string>
    <string name="register_emptyMobilePhone">Please enter your mobile number.</string>
    <string name="register_errorMobilePhone">Please enter a valid mobile number.</string>
    <string name="register_email">Enter your email</string>
    <string name="register_emptyEmail">Please enter your email.</string>
    <string name="register_errorEmail">Please enter a valid email you@yourdomain.</string>
    <string name="register_address">Enter your address</string>
    <string name="register_emptyAddress">Please enter your address.</string>
    <string name="register_signature">Please affix your signature.</string>
    <string name="register_signatureClear">Clear</string>
    <string name="register_scanDocumentTitle">Scan Document</string>
    <string name="register_confirmScanDocument">Please permit us to turn on camera to complete scan document. Yes / No</string>
    <string name="register_noToScanDocument">Your identity verification has not been completed. Are you sure to exit?</string>
    <string name="register_continue">No, continue.</string>
    <string name="register_exit">Yes, exit now.</string>
    <string name="register_scanDocumentTip">Please scan the valid certificate you used when you registered</string>
    <string name="register_scanFront">Scan Front</string>
    <string name="register_cameraPermissionDenied">You refused to enable camera permission for your phone, so we can\'t scan document.</string>
    <string name="register_noScanFront">Please scan the front of the certificate.</string>
    <string name="register_scanBack">Scan Back</string>
    <string name="register_noScanBack">Please scan the back of the certificate.</string>
    <string name="register_driverLicense">driver\'s license</string>
    <string name="register_emptyCertificate">Please select your certificate.</string>
    <string name="register_takePhoto">Take Photo</string>
    <string name="register_faceRecognition">Face Recognition</string>
    <string name="register_faceRecognitionTip">Move your head slowly to complete the circle.</string>
    <string name="register_confirmFaceRecognition">Need to perform face recognition, please click start and face camera. Yes / No</string>
    <string name="register_verifyMobile">Verify Mobile Number</string>
    <string name="register_verifyMobileTip">Enter the code SOE just texted you</string>
    <string name="register_receiveCodeQuestion">It may take a few minutes to receive your code. Still haven\'t received it?</string>
    <string name="register_requestNewCode">Request new code</string>
    <string name="register_emptyVerificationCode">Please enter the received code.</string>
    <string name="register_errorVerificationCode">The code entered is wrong.</string>
    <string name="register_requestNewCodeSuccess">The code sent successfully.</string>
    <string name="register_verifyMobileSuccess">Verification Completed</string>
    <string name="register_enableFingerprint">Enable Fingerprint Log In:</string>
    <string name="register_errorFingerprint">Please verify your fingerprint.</string>
    <string name="register_fingerprintVerifiedSuccess">Verified successfully</string>
    <string name="register_already">Already registered</string>

    <string name="biometric_dialog_cancel">Cancel</string>
    <string name="biometric_dialog_title">Verification</string>
    <string name="biometric_dialog_subtitle">Verify fingerprint to continue</string>
    <string name="biometric_dialog_state_normal">Fingerprint sensor</string>
    <string name="biometric_dialog_state_failed">Failed to identify, please try again</string>
    <string name="biometric_dialog_state_error">Verification error, please enter payment password</string>
    <string name="biometric_dialog_state_error_enable_process">Verification error, setup failed</string>
    <string name="biometric_dialog_state_succeeded">Verification successful</string>
    <string name="biometric_dialog_use_password">Use Password</string>

    <string name="gotv_verifications">Verifications</string>
    <string name="gotv_device">Device</string>
    <string name="gotv_electionOfficials">My election officials</string>
    <string name="gotv_myBallots">My Ballots</string>
    <string name="gotv_verified">Verified</string>
    <string name="gotv_results">Results</string>
    <string name="gotv_verifyVote">Verify Your Vote</string>
    <string name="gotv_verifyVoteTip">Only available after voting results</string>

    <string name="ballot_vote">Vote</string>
    <string name="ballot_voted">Voted</string>
    <string name="ballot_voteDone">Done</string>
    <string name="ballot_voteCancel">Cancel</string>
    <string name="ballot_voteMissing">seat(s) left to vote.</string>
    <string name="ballot_setVerificationCode">Please enter any content (text, numbers, special symbols, etc.) as your verification code, which will be used to check whether the voting result of the election matches with your vote.</string>
    <string name="ballot_votingConfirm">Are you ready to submit your ballot?</string>
    <string name="ballot_submit">Submit</string>
    <string name="ballot_emptyVerificationCode">Please enter your verification code.</string>
    <string name="ballot_votedSuccess">You Voted!</string>
    <string name="ballot_votedOn">Voted on</string>
    <string name="ballot_sample">Sample ballot</string>

    <string name="viewVotingProgress_view">View the voting progress</string>
    <string name="viewVotingProgress_title">Voting Progress</string>
    <string name="viewVotingProgress_mobileVoting">Mobile Voter Voting Status</string>
    <string name="viewVotingProgress_state">State</string>
    <string name="viewVotingProgress_county">County</string>
    <string name="viewVotingProgress_precinct">Precinct</string>
    <string name="viewVotingProgress_date">Date</string>
    <string name="viewVotingProgress_dateStartTitle">Set start date</string>
    <string name="viewVotingProgress_dateStart">Start</string>
    <string name="viewVotingProgress_dateTo">To</string>
    <string name="viewVotingProgress_dateToTitle">Set to date</string>
    <string name="viewVotingProgress_count">Number of Voting</string>
    <string name="viewVotingProgress_total">Total:</string>
    <string name="viewVotingProgress_voter">Voter</string>
    <string name="viewVotingProgress_votingResult">Voting Result</string>
    <string name="viewVotingProgress_verificationCode">Verification Code</string>

    <string name="verifyVote_title">Verify Vote</string>
    <string name="verifyVote_tip">Please make sure that you have voted for this ballot on %1$s. If you find that this ballot was not voted by yourself, you can report to SOE here.</string>
    <string name="verifyVote_confirm">Please confirm that this vote was voted by yourself:</string>
    <string name="verifyVote_yes">Yes, I\'m sure.</string>
    <string name="verifyVote_no">No, it\'s not me</string>
    <string name="verifyVote_confirmed">You have confirmed your vote.</string>
    <string name="verifyVote_success">Thank you for your confirmation.</string>
    <string name="verifyVote_appeal">You confirm that the ballot was not voted by yourself, please contact your local SOE.</string>
    <string name="verifyVote_unverified">Unverified</string>
    <string name="verifyVote_verified">Verified</string>

    <string name="ballotResults_national">National</string>
    <string name="ballotResults_votes">Votes:</string>
    <string name="ballotResults_lastUpdate">Update:</string>
    <string name="ballotResults_reporting">Reporting:</string>
    <string name="ballotResults_totalVotes">Total:</string>
    <string name="ballotResults_statesReporting">states reporting</string>
    <string name="ballotResults_countiesReporting">counties reporting</string>
    <string name="ballotResults_precinctsReporting">precincts reporting</string>

</resources>
