<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/pachain_ui_topnavigation_back"/>
    <RelativeLayout
        android:id="@+id/rl_confirm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <ListView
            android:id="@+id/lv_contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:layout_marginBottom="75dp"
            android:divider="@null"
            android:fastScrollEnabled="false"
            android:overScrollMode="never"
            android:scrollbars="none"/>
        <LinearLayout
            android:id="@+id/ll_toolBar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white">
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/listLine"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/verifyVote_confirm"
                    android:textColor="@color/red"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <TextView
                        android:id="@+id/tv_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/verifyVote_yes"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:background="@drawable/pachain_shape_button_solidfilletblue"/>
                    <TextView
                        android:id="@+id/tv_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="36dp"
                        android:text="@string/verifyVote_no"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:background="@drawable/pachain_shape_button_solidfilletgray"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_verify"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/register_verifyMobileTip"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/et_verificationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:inputType="text"
            android:background="@drawable/pachain_shape_frame"/>
        <TextView
            android:id="@+id/tv_verifyMobile_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/common_next"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:background="@drawable/pachain_shape_button_solidfilletblue"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/register_receiveCodeQuestion"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv_requestNewCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:textSize="14sp"
            android:textColor="@color/mainBlue"
            android:text="@string/register_requestNewCode"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>