<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_networkUnavailable"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:background="@color/white">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pachain_ico_wifi"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/network_unavailable_title"
            android:textSize="17sp"
            android:textColor="@color/secondaryGray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/network_unavailable_content"
            android:textSize="14sp"
            android:textColor="@color/threeGray"/>
        <TextView
            android:id="@+id/tv_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:text="@string/network_unavailable_reload"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/pachain_shape_button_solidfillet"/>
    </LinearLayout>
</LinearLayout>