<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/pachain_ui_topnavigation_back"/>
    <LinearLayout
        android:id="@+id/ll_voting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:gravity="center_horizontal"
            android:text="@string/ballot_votingConfirm"
            android:textSize="16sp"
            android:textColor="@color/secondaryGray"/>
        <ImageView
            android:layout_width="133dp"
            android:layout_height="133dp"
            android:layout_marginTop="26dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pachain_vote"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/ballot_setVerificationCode"
            android:textSize="14sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_verificationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:inputType="text"
            android:background="@drawable/pachain_shape_frame"/>
        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="35dp"
            android:textColor="@color/white"
            android:text="@string/ballot_submit"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/pachain_shape_button_solidfilletblue"/>
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/common_back"
            android:textSize="14sp"
            android:textColor="@color/mainBlue"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_voted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pachain_confirmed"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:text="@string/ballot_votedSuccess"
            android:textSize="17sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_votedBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/common_back"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:background="@drawable/pachain_shape_button_solidfilletblue"/>
    </LinearLayout>
</LinearLayout>