<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/ll_election"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/white"
        android:visibility="visible">
        <TextView
            android:id="@+id/tv_viewProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/mainBlue"
            android:text="@string/viewVotingProgress_view"
            android:background="@drawable/pachain_shape_light_selector"/>
        <TextView
            android:id="@+id/tv_sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/black"
            android:text="@string/ballot_sample"/>
        <TextView
            android:id="@+id/tv_electionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_electionDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/threeGray"
            android:gravity="center_horizontal"/>
        <LinearLayout
            android:id="@+id/ll_toolVote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:visibility="visible">
            <TextView
                android:id="@+id/tv_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ballot_vote"
                android:textColor="@color/white"
                android:background="@drawable/pachain_shape_button_solidfilletblue"
                android:textSize="14sp"
                android:visibility="visible"/>
            <LinearLayout
                android:id="@+id/ll_voted"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ballot_voted"
                    android:textSize="16sp"
                    android:textColor="@color/mainBlue"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:paddingLeft="5dp"
                    android:src="@drawable/pachain_finish"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_voting"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:visibility="gone">
            <TextView
                android:id="@+id/tv_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/pachain_shape_button_solidfilletblue"
                android:text="@string/ballot_voteDone"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>
            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ballot_voteCancel"
                android:textColor="@color/black"
                android:background="@drawable/pachain_shape_button_solidfilletgray"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_verifyTip"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible">
        <TextView
            android:id="@+id/tv_verifyTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/verifyVote_tip"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_seat"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/ll_seatBar"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_vertical">
            <View
                android:layout_width="4dp"
                android:layout_height="12dp"
                android:layout_marginLeft="15dp"
                android:background="@color/mainBlue"/>
            <TextView
                android:id="@+id/tv_seatName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/listLine"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_candidate"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:background="@color/white">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp">
            <CheckBox
                android:id="@+id/ch_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"/>
            <FrameLayout
                android:layout_width="60dp"
                android:layout_height="66dp"
                android:layout_gravity="center">
                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/iv_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    fresco:placeholderImage="@drawable/pachain_candidate_defaultphoto"/>
                <TextView
                    android:id="@+id/tv_party"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:layout_gravity="right|bottom"/>
            </FrameLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="66dp"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:layout_gravity="center_vertical">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/black" />
                    <ImageView
                        android:id="@+id/iv_voted"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:paddingLeft="5dp"
                        android:src="@drawable/pachain_finish"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>